# mdona-scrapper-ynab

./: .gitignore  README.md  main.py  pyproject.toml  ynab_test.py
.github/workflows/: publish.yml
src/: models.py
src/consum_scrapper/: __init__.py
src/invoice_scrapper/: __init__.py
src/mdona_scrapper/: __init__.py
src/utils/: __init__.py
test/: donut_model.py  ynab_test.py
